# deconstructor

./: mise.toml  pyproject.toml
agent/: requirements.txt  structure-output.py  structure-rules-archive.py  structure.py
components/: docs-sheet.tsx
