[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "griptape[drivers-observability-opentelemetry,drivers-prompt-google]>=1.4.3",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["pyright>=1.1.396", "ruff>=0.9.9"]


[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["agent"]
pythonVersion = "3.12"
