[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "griptape[drivers-observability-opentelemetry,drivers-prompt-google]>=1.4.3",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["pyright>=1.1.396", "ruff>=0.9.9"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D104",   # Missing docstring in public package
  "COM812", # Missing trailing comma in a single-line list
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "PT",     # Pytest 
  "EM101",
  "TRY003",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["agent"]
pythonVersion = "3.12"
